(Hopefully) stop 'search from' text wrapping badly

--- a/toolkit/diary/static/diary/css/archive.css
+++ b/toolkit/diary/static/diary/css/archive.css
@@ -11,7 +11,7 @@
 	width: 300px;
 }
 .search_form ul {
-	width: 400px;
+	width: 450px;
 }
 .search_form li {
 	text-align: right;
